--- a/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/tablesExercise.html
@@ -14,7 +14,7 @@
 
     <!-- Text title -->
 
-    <h1 id="title"> ¡WARNING, ALIENS ARE COMMING FROM OTHER GALAXY TO EARTH! </h1>
+    <h1 id="title"> ¡WARNING, THE MOST POPULAR BOOKS ARE BACK ON SALES! </h1>
 
     <!-- Text subtitle -->
 
@@ -30,25 +30,52 @@
 
     <div id="contentAliens">
 
-    <p id="titleAliens"> Emergency Broadcast: Global Governments Confirm Alien Takeover Imminent </p>
-    <p id="subtitleAliens">December 4, 2025</p>
-    <p>In an unprecedented joint press conference held hours ago, the leaders of the world's major powers confirmed that Earth is facing an imminent and unstoppable alien takeover. The unified message, broadcast across all international channels, declared that attempts to negotiate or militarily resist the advanced extraterrestrial force, designated "The Sovereign," have failed.</p>
+    <p id="titleAliens"> Emergency Broadcast: Global Governments Confirm Sales Of The Most Popular Books Around The World </p>
+    <p id="subtitleAliens">December 11, 2025</p>
+    <p>In an unprecedented joint press conference held hours ago, the leaders of the world's major powers confirmed that Earth is facing an imminent and unstoppable book takeover. The unified message, broadcast across all international channels, declared that attempts to negotiate or militarily resist the advanced extraterrestrial force, designated "The Sovereign BOOK," have failed.</p>
 
     </div>
+
+    <img src="img/AliensIMG" height="500px">
 
     <!-- Table -->
 
     <table id="table1">
         
     <tr>
-        <th>Col. 1</th>
-        <th>Col. 2</th>
-        <th>Col. 3</th>
+        <th>Autor</th>
+        <th id="Row2">Book</th>
+        <th>Price</th>
     </tr>
     <tr>
-        <td>Row 1.1</td>
-        <td>Row 1.2</td>
-        <td>Row 1.3</td>
+        <td id="Row1"><a href="index.html">Gabriel García Márquez</a></td>
+        <td id="Row2"><a href="index.html">Cien años de soledad</a></td>
+        <td id="Row3"><a href="index.html">12,95 €</a></td>
+    </tr>
+    <tr>
+        <td id="Row1"><a href="tablesExercise.html">J.K. Rowling</a></td>
+        <td id="Row2"><a href="tablesExercise.html">Harry Potter y la piedra filosofal</a></td>
+        <td id="Row3"><a href="tablesExercise.html">9,50 €</a></td>
+    </tr>
+    <tr>
+        <td id="Row1"><a href="tablesExercise.html">Miguel de Cervantes</a></td>
+        <td id="Row2"><a href="tablesExercise.html">Don Quijote de la Mancha</a></td>
+        <td id="Row3"><a href="tablesExercise.html">15,00 €</a></td>
+    </tr>
+    <tr>
+        <td id="Row1"><a href="tablesExercise.html">Jane Austen</a></td>
+        <td id="Row2"><a href="tablesExercise.html">Orgullo y prejuicio</a></td>
+        <td id="Row3"><a href="tablesExercise.html">15,00 €</a></td>
+    </tr>
+    <tr>
+        <td id="Row1"><a href="tablesExercise.html">Brandon Sanderson</a></td>
+        <td id="Row2"><a href="tablesExercise.html">El camino de los reyes/a></td>
+        <td id="Row3"><a href="tablesExercise.html">25,95 €</a></td>
+    </tr>
+    <tr>
+        <td id="Row1"><a href="tablesExercise.html">George Orwell</a></td>
+        <td id="Row2"><a href="tablesExercise.html">1984</a></td>
+        <td id="Row3"><a href="tablesExercise.html">10,99 €</a></td>
     </tr>
 
     </table>
