--- a/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/tablesExercise.html
@@ -43,9 +43,11 @@
     <table id="table1">
         
     <tr>
+        <th></th>
         <th>Autor</th>
         <th id="Row2">Book</th>
         <th>Price</th>
+        <th>Identifier</th>
     </tr>
     <tr>
         <th>1</th>
