Realización de 4.8 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/tablesExercise.html
@@ -43,6 +43,9 @@
     <table id="table1">
         
     <tr>
+        <th colspan="4">POPULAR BOOKS</th>
+    </tr>
+    <tr>
         <th></th>
         <th>Autor</th>
         <th id="Row2">Book</th>
