--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
@@ -53,14 +53,12 @@
         <th>Identifier</th>
     </tr>
     <tr>
-        <th>1</th>
-        <td id="Row1"><a href="index.html">Gabriel García Márquez</a></td>
+        <th rowspan="2">1</th>
+        <td id="Row1" rowspan="2"><a href="index.html">Gabriel García Márquez</a></td>
         <td id="Row2"><a href="index.html">Cien años de soledad</a></td>
         <td id="Row3"><a href="index.html">12,95 €</a></td>
     </tr>
-    <tr>
-        <th>2</th>
-        <td id="Row1"><a href="tablesExercise.html">J.K. Rowling</a></td>
+    <tr>        
         <td id="Row2"><a href="tablesExercise.html">Harry Potter y la piedra filosofal</a></td>
         <td id="Row3"><a href="tablesExercise.html">9,50 €</a></td>
     </tr>
