--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablasExerciseSpecia.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablasExerciseSpecia.html
@@ -9,29 +9,23 @@
 <body>
     <table style="width: 100%;">
         <tr>
-            <th>a</th>
-            <td colspan="2">1</td>
-            <td colspan="2">2</td>
+            <td rowspan="3">1</td>
+            <td colspan="2">3</td>
+            <td rowspan="2">b</td>
         </tr>
         <tr>
-            <th>b</th>
-            <td>3</td>
-            <td colspan="2">4</td>
-            <td>5</td>            
+            <td rowspan="2">2</td>
+            <td>a</td>
         </tr>
         <tr>
-            <th>c</th>
+            <td>c</td>
+            <td rowspan="2">6</td>
+        </tr>
+        <tr>
+            <td>4</td>
             <td colspan="2">5</td>
-            <td colspan="2">6</td>
         </tr>
-        <tr>
-            <th>d</th>
-            <td>7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-        </tr>
-
+        
     </table>
 </body>
 </html>
