Realización de 4.13 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablasExerciseSpecia.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablasExerciseSpecia.html
@@ -7,7 +7,7 @@
     <title>index</title>
 </head>
 <body>
-    <table style="width: 100%;">
+    <table style="width: 100%;" id="tablasExerciseSpecia">
         <tr>
             <td rowspan="3">1</td>
             <td colspan="2">3</td>
