Realización de 4.16 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
@@ -41,6 +41,10 @@
     <!-- Table -->
 
     <table id="table1">
+
+    <colgroup>
+    <col span="2" style="background-color: #ffa5f3">
+    </colgroup>
         
     <tr>
         <th colspan="4">POPULAR BOOKS</th>
