Realización de 4.17 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
@@ -93,5 +93,13 @@
 
     </table>
 
+    <ol>
+        <li>Gabriel García Márquez</li>
+        <li>Miguel de Cervantes</li>
+        <li>Jane Austen</li>
+        <li>Brandon Sanderson</li>
+        <li>George Orwell</li>
+    </ol> 
+
 </body>
 </html>
