Realización de 4.18 lenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
@@ -94,12 +94,52 @@
     </table>
 
     <ol>
-        <li>Gabriel García Márquez</li>
-        <li>Miguel de Cervantes</li>
-        <li>Jane Austen</li>
-        <li>Brandon Sanderson</li>
-        <li>George Orwell</li>
-    </ol> 
+    <li>Gabriel García Márquez
+        <ul>
+            <li>Cien años de soledad</li>
+            <li>El amor en los tiempos del cólera</li>
+            <li>Crónica de una muerte anunciada</li>
+            <li>El coronel no tiene quien le escriba</li>
+            <li>Memoria de mis putas tristes</li>
+        </ul>
+    </li>
+    <li>Miguel de Cervantes
+        <ul>
+            <li>Don Quijote de la Mancha</li>
+            <li>Novelas ejemplares</li>
+            <li>La Galatea</li>
+            <li>Los trabajos de Persiles y Sigismunda</li>
+            <li>Viaje del Parnaso</li>
+        </ul>
+    </li>
+    <li>Jane Austen
+        <ul>
+            <li>Orgullo y prejuicio</li>
+            <li>Sentido y sensibilidad</li>
+            <li>Emma</li>
+            <li>Persuasión</li>
+            <li>Mansfield Park</li>
+        </ul>
+    </li>
+    <li>Brandon Sanderson
+        <ul>
+            <li>El imperio final</li>
+            <li>El archivo de las tormentas</li>
+            <li>Las crónicas del metal etéreo</li>
+            <li>El despertar del aliento de ceniza</li>
+            <li>Sinfonía de fragmentos olvidados</li>
+        </ul>
+    </li>
+    <li>George Orwell
+        <ul>
+            <li>1984</li>
+            <li>Rebelión en la granja</li>
+            <li>Homenaje a Cataluña</li>
+            <li>Sin blanca en París y Londres</li>
+            <li>Subir a por aire</li>
+        </ul>
+    </li>
+</ol>
 
 </body>
 </html>
