--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/tablesExercise.html
@@ -1,145 +1,155 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/css.css" rel="stylesheet">
-    <title>index</title>
+    <title>Tables Exercise</title>
 </head>
+
 <body>
 
     <div id="header">
-
-    <!-- Text title -->
-
-    <h1 id="title"> ¡WARNING, THE MOST POPULAR BOOKS ARE BACK ON SALES! </h1>
-
-    <!-- Text subtitle -->
-
-    <h2 id="sub-title">by Eloy Ballester Chust</h2>
-
+        <h1 id="title"> ¡WARNING, THE MOST POPULAR BOOKS ARE BACK ON SALES! </h1>
+        <h2 id="sub-title">by Eloy Ballester Chust</h2>
     </div>
 
-    <!-- Temopral link-->
-    
+    <!-- Link back to index -->
     <a href="index.html">Link_Improved_index</a>
 
-    <br>
+    <br><br>
 
     <div id="contentAliens">
-
-    <p id="titleAliens"> Emergency Broadcast: Global Governments Confirm Sales Of The Most Popular Books Around The World </p>
-    <p id="subtitleAliens">December 11, 2025</p>
-    <p>In an unprecedented joint press conference held hours ago, the leaders of the world's major powers confirmed that Earth is facing an imminent and unstoppable book takeover. The unified message, broadcast across all international channels, declared that attempts to negotiate or militarily resist the advanced extraterrestrial force, designated "The Sovereign BOOK," have failed.</p>
-
+        <p id="titleAliens">
+            Emergency Broadcast: Global Governments Confirm Sales Of The Most Popular Books Around The World
+        </p>
+        <p id="subtitleAliens">December 11, 2025</p>
+        <p>
+            In an unprecedented joint press conference held hours ago, the leaders of the world's major powers confirmed
+            that Earth is facing an imminent and unstoppable book takeover.
+        </p>
     </div>
 
     <img src="img/AliensIMG" height="500px">
 
-    <!-- Table -->
-
+    <!-- TABLE -->
     <table id="table1">
+        <colgroup>
+            <col span="2" style="background-color: #ffa5f3">
+        </colgroup>
 
-    <colgroup>
-    <col span="2" style="background-color: #ffa5f3">
-    </colgroup>
-        
-    <tr>
-        <th colspan="4">POPULAR BOOKS</th>
-    </tr>
-    <tr>
-        <th></th>
-        <th>Autor</th>
-        <th id="Row2">Book</th>
-        <th>Price</th>
-        <th>Identifier</th>
-    </tr>
-    <tr>
-        <th rowspan="2">1</th>
-        <td id="Row1" rowspan="2"><a href="index.html">Gabriel García Márquez</a></td>
-        <td id="Row2"><a href="index.html">Cien años de soledad</a></td>
-        <td id="Row3"><a href="index.html">12,95 €</a></td>
-    </tr>
-    <tr>        
-        <td id="Row2"><a href="tablesExercise.html">Harry Potter y la piedra filosofal</a></td>
-        <td id="Row3"><a href="tablesExercise.html">9,50 €</a></td>
-    </tr>
-    <tr>
-        <th>3</th>
-        <td id="Row1"><a href="tablesExercise.html">Miguel de Cervantes</a></td>
-        <td id="Row2"><a href="tablesExercise.html">Don Quijote de la Mancha</a></td>
-        <td id="Row3"><a href="tablesExercise.html">15,00 €</a></td>
-    </tr>
-    <tr>
-        <th>4</th>
-        <td id="Row1"><a href="tablesExercise.html">Jane Austen</a></td>
-        <td id="Row2"><a href="tablesExercise.html">Orgullo y prejuicio</a></td>
-        <td id="Row3"><a href="tablesExercise.html">15,00 €</a></td>
-    </tr>
-    <tr>
-        <th>5</th>
-        <td id="Row1"><a href="tablesExercise.html">Brandon Sanderson</a></td>
-        <td id="Row2"><a href="tablesExercise.html">El camino de los reyes/a></td>
-        <td id="Row3"><a href="tablesExercise.html">25,95 €</a></td>
-    </tr>
-    <tr>
-        <th>6</th>
-        <td id="Row1"><a href="tablesExercise.html">George Orwell</a></td>
-        <td id="Row2"><a href="tablesExercise.html">1984</a></td>
-        <td id="Row3"><a href="tablesExercise.html">10,99 €</a></td>
-    </tr>
+        <tr>
+            <th colspan="4">POPULAR BOOKS</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th>Autor</th>
+            <th>Book</th>
+            <th>Price</th>
+        </tr>
 
+        <tr>
+            <th rowspan="2">1</th>
+            <td><a href="index.html">Gabriel García Márquez</a></td>
+            <td><a href="index.html">Cien años de soledad</a></td>
+            <td><a href="index.html">12,95 €</a></td>
+        </tr>
+        <tr>
+            <td><a href="tablesExercise.html">Harry Potter</a></td>
+            <td><a href="tablesExercise.html">Harry Potter y la piedra filosofal</a></td>
+            <td><a href="tablesExercise.html">9,50 €</a></td>
+        </tr>
+
+        <tr>
+            <th>3</th>
+            <td><a href="tablesExercise.html">Miguel de Cervantes</a></td>
+            <td><a href="tablesExercise.html">Don Quijote de la Mancha</a></td>
+            <td><a href="tablesExercise.html">15,00 €</a></td>
+        </tr>
+
+        <tr>
+            <th>4</th>
+            <td><a href="tablesExercise.html">Jane Austen</a></td>
+            <td><a href="tablesExercise.html">Orgullo y prejuicio</a></td>
+            <td><a href="tablesExercise.html">15,00 €</a></td>
+        </tr>
+
+        <tr>
+            <th>5</th>
+            <td><a href="tablesExercise.html">Brandon Sanderson</a></td>
+            <td><a href="tablesExercise.html">El camino de los reyes</a></td>
+            <td><a href="tablesExercise.html">25,95 €</a></td>
+        </tr>
+
+        <tr>
+            <th>6</th>
+            <td><a href="tablesExercise.html">George Orwell</a></td>
+            <td><a href="tablesExercise.html">1984</a></td>
+            <td><a href="tablesExercise.html">10,99 €</a></td>
+        </tr>
     </table>
 
-    <ol>
-    <li>Gabriel García Márquez
-        <ul>
-            <li>Cien años de soledad</li>
-            <li>El amor en los tiempos del cólera</li>
-            <li>Crónica de una muerte anunciada</li>
-            <li>El coronel no tiene quien le escriba</li>
-            <li>Memoria de mis putas tristes</li>
-        </ul>
-    </li>
-    <li>Miguel de Cervantes
-        <ul>
-            <li>Don Quijote de la Mancha</li>
-            <li>Novelas ejemplares</li>
-            <li>La Galatea</li>
-            <li>Los trabajos de Persiles y Sigismunda</li>
-            <li>Viaje del Parnaso</li>
-        </ul>
-    </li>
-    <li>Jane Austen
-        <ul>
-            <li>Orgullo y prejuicio</li>
-            <li>Sentido y sensibilidad</li>
-            <li>Emma</li>
-            <li>Persuasión</li>
-            <li>Mansfield Park</li>
-        </ul>
-    </li>
-    <li>Brandon Sanderson
-        <ul>
-            <li>El imperio final</li>
-            <li>El archivo de las tormentas</li>
-            <li>Las crónicas del metal etéreo</li>
-            <li>El despertar del aliento de ceniza</li>
-            <li>Sinfonía de fragmentos olvidados</li>
-        </ul>
-    </li>
-    <li>George Orwell
-        <ul>
-            <li>1984</li>
-            <li>Rebelión en la granja</li>
-            <li>Homenaje a Cataluña</li>
-            <li>Sin blanca en París y Londres</li>
-            <li>Subir a por aire</li>
-        </ul>
-    </li>
-</ol>
+    <br><br>
+
+    <ol id="booksList">
+
+        <li>
+            <a href="tablesExercise.html">Gabriel García Márquez</a>
+            <ul>
+                <li><button href="tablesExercise.html">Cien años de soledad</a></li>
+                <li><button href="tablesExercise.html">El amor en los tiempos del cólera</a></li>
+                <li><button href="tablesExercise.html">Crónica de una muerte anunciada</a></li>
+                <li><button href="tablesExercise.html">El coronel no tiene quien le escriba</a></li>
+                <li><button href="tablesExercise.html">Memoria de mis putas tristes</a></li>
+            </ul>
+        </li>
+
+        <li>
+            <a href="tablesExercise.html">Miguel de Cervantes</a>
+            <ul>
+                <li><button href="tablesExercise.html">Don Quijote de la Mancha</a></li>
+                <li><button href="tablesExercise.html">Novelas ejemplares</a></li>
+                <li><button href="tablesExercise.html">La Galatea</a></li>
+                <li><button href="tablesExercise.html">Los trabajos de Persiles y Sigismunda</a></li>
+                <li><button href="tablesExercise.html">Viaje del Parnaso</a></li>
+            </ul>
+        </li>
+
+        <li>
+            <a href="tablesExercise.html">Jane Austen</a>
+            <ul>
+                <li><button href="tablesExercise.html">Orgullo y prejuicio</a></li>
+                <li><button href="tablesExercise.html">Sentido y sensibilidad</a></li>
+                <li><button href="tablesExercise.html">Emma</a></li>
+                <li><button href="tablesExercise.html">Persuasión</a></li>
+                <li><button href="tablesExercise.html">Mansfield Park</a></li>
+            </ul>
+        </li>
+
+        <li>
+            <a href="tablesExercise.html">Brandon Sanderson</a>
+            <ul>
+                <li><button href="tablesExercise.html">El imperio final</a></li>
+                <li><button href="tablesExercise.html">El archivo de las tormentas</a></li>
+                <li><button href="tablesExercise.html">Las crónicas del metal etéreo</a></li>
+                <li><button href="tablesExercise.html">El despertar del aliento de ceniza</a></li>
+                <li><button href="tablesExercise.html">Sinfonía de fragmentos olvidados</a></li>
+            </ul>
+        </li>
+
+        <li>
+            <a href="tablesExercise.html">George Orwell</a>
+            <ul>
+                <li><button href="tablesExercise.html">1984</a></li>
+                <li><button href="tablesExercise.html">Rebelión en la granja</a></li>
+                <li><button href="tablesExercise.html">Homenaje a Cataluña</a></li>
+                <li><button href="tablesExercise.html">Sin blanca en París y Londres</a></li>
+                <li><button href="tablesExercise.html">Subir a por aire</a></li>
+            </ul>
+        </li>
+
+    </ol>
 
 </body>
 </html>
