Realización de 4.20 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
@@ -3,61 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick News Summary</title>
-    <link rel="stylesheet" href="css/css.css">
-    
+    <title>Exercise: News Feed with Custom Classes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Global News Bulletin</h1>
+    <h1 class="main-page-title">World News Daily</h1>
 
-    <div class="news-card sports">
-        <span class="category">Sports</span>
-        <strong>Golden State Warriors win thriller.</strong> Steph Curry hit a buzzer-beater 
-        to secure a narrow victory against the Lakers. The game showcased incredible 
-        defense and high-speed transitions, keeping fans on the edge of their seats.
+    <div class="news-item sports-container">
+        <h2 class="news-header sports-header">Sports</h2>
+        <p class="news-body">
+            <strong>Golden State Warriors win thriller.</strong> Steph Curry hit a buzzer-beater 
+            to secure a victory against the Lakers. The game showcased incredible 
+            defense and high-speed transitions.
+        </p>
     </div>
 
-    <div class="news-card science">
-        <span class="category">Science</span>
-        <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
-        mineral patterns suggesting ancient riverbeds were active longer than previously 
-        thought. This finding boosts the possibility of past microbial life on the planet.
+    <div class="news-item science-container">
+        <h2 class="news-header science-header">Science</h2>
+        <p class="news-body">
+            <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
+            mineral patterns suggesting ancient riverbeds were active longer than thought. 
+            This boosts the possibility of past life.
+        </p>
     </div>
 
-    <div class="news-card celebs">
-        <span class="category">Celebrities</span>
-        <strong>Pop star announces surprise tour.</strong> After a three-year hiatus, 
-        the Grammy winner revealed a 40-city world tour starting this summer. Fans 
-        crashed the website within minutes of the announcement seeking early tickets.
+    <div class="news-item celebs-container">
+        <h2 class="news-header celebs-header">Celebrities</h2>
+        <p class="news-body">
+            <strong>Pop star announces surprise tour.</strong> After a three-year hiatus, 
+            the Grammy winner revealed a 40-city world tour starting this summer. Fans 
+            crashed the website seeking early tickets.
+        </p>
     </div>
 
-    <div class="news-card tech">
-        <span class="category">Technology</span>
-        <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
-        humans in complex debugging tasks. Experts suggest this will accelerate software 
-        development cycles while raising new questions about the future of entry-level jobs.
+    <div class="news-item tech-container">
+        <h2 class="news-header tech-header">Technology</h2>
+        <p class="news-body">
+            <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
+            humans in complex debugging tasks. Experts suggest this will accelerate 
+            software development cycles worldwide.
+        </p>
     </div>
 
-    <div class="news-card health">
-        <span class="category">Health</span>
-        <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials for a "one-shot" 
-        flu vaccine have shown promising results. If successful, this could eliminate the 
-        need for annual shots by targeting more stable parts of the virus.
+    <div class="news-item health-container">
+        <h2 class="news-header health-header">Health</h2>
+        <p class="news-body">
+            <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials for a 
+            "one-shot" flu vaccine have shown promising results. This could eliminate 
+            the need for annual shots by targeting stable virus parts.
+        </p>
     </div>
 
-    <div class="news-card nature">
-        <span class="category">Nature</span>
-        <strong>Amazon reforestation success.</strong> A massive community-led project has 
-        successfully restored 10,000 hectares of rainforest. Local biodiversity is returning, 
-        with sightings of rare jaguars and colorful macaws increasing significantly.
+    <div class="news-item nature-container">
+        <h2 class="news-header nature-header">Nature</h2>
+        <p class="news-body">
+            <strong>Amazon reforestation success.</strong> A massive community project 
+            restored 10,000 hectares of rainforest. Local biodiversity is returning, 
+            with sightings of rare jaguars increasing.
+        </p>
     </div>
 
-    <div class="news-card politics">
-        <span class="category">Politics</span>
-        <strong>Global Trade Summit opens.</strong> World leaders gathered today to discuss 
-        new green energy subsidies. The goal is to create a unified framework for reducing 
-        carbon footprints while maintaining stable economic growth across developing nations.
+    <div class="news-item politics-container">
+        <h2 class="news-header politics-header">Politics</h2>
+        <p class="news-body">
+            <strong>Global Trade Summit opens.</strong> World leaders gathered today to 
+            discuss new green energy subsidies. The goal is a unified framework for 
+            reducing carbon footprints while maintaining growth.
+        </p>
     </div>
 
 </body>
