--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise: News Feed with Custom Classes</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Quick News Summary</title>
+    <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
 
@@ -14,8 +14,7 @@
         <h2 class="news-header sports-header">Sports</h2>
         <p class="news-body">
             <strong>Golden State Warriors win thriller.</strong> Steph Curry hit a buzzer-beater 
-            to secure a victory against the Lakers. The game showcased incredible 
-            defense and high-speed transitions.
+            to secure a victory against the Lakers.
         </p>
     </div>
 
@@ -23,8 +22,7 @@
         <h2 class="news-header science-header">Science</h2>
         <p class="news-body">
             <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
-            mineral patterns suggesting ancient riverbeds were active longer than thought. 
-            This boosts the possibility of past life.
+            mineral patterns suggesting ancient riverbeds.
         </p>
     </div>
 
@@ -32,8 +30,7 @@
         <h2 class="news-header celebs-header">Celebrities</h2>
         <p class="news-body">
             <strong>Pop star announces surprise tour.</strong> After a three-year hiatus, 
-            the Grammy winner revealed a 40-city world tour starting this summer. Fans 
-            crashed the website seeking early tickets.
+            the Grammy winner revealed a 40-city world tour.
         </p>
     </div>
 
@@ -41,8 +38,7 @@
         <h2 class="news-header tech-header">Technology</h2>
         <p class="news-body">
             <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
-            humans in complex debugging tasks. Experts suggest this will accelerate 
-            software development cycles worldwide.
+            humans in complex debugging tasks.
         </p>
     </div>
 
@@ -50,8 +46,7 @@
         <h2 class="news-header health-header">Health</h2>
         <p class="news-body">
             <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials for a 
-            "one-shot" flu vaccine have shown promising results. This could eliminate 
-            the need for annual shots by targeting stable virus parts.
+            "one-shot" flu vaccine have shown promising results.
         </p>
     </div>
 
@@ -59,8 +54,7 @@
         <h2 class="news-header nature-header">Nature</h2>
         <p class="news-body">
             <strong>Amazon reforestation success.</strong> A massive community project 
-            restored 10,000 hectares of rainforest. Local biodiversity is returning, 
-            with sightings of rare jaguars increasing.
+            restored 10,000 hectares of rainforest.
         </p>
     </div>
 
@@ -68,8 +62,7 @@
         <h2 class="news-header politics-header">Politics</h2>
         <p class="news-body">
             <strong>Global Trade Summit opens.</strong> World leaders gathered today to 
-            discuss new green energy subsidies. The goal is a unified framework for 
-            reducing carbon footprints while maintaining growth.
+            discuss new green energy subsidies.
         </p>
     </div>
 
