Realización de 4.22 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
@@ -8,13 +8,17 @@
 </head>
 <body>
 
-    <h1 class="main-page-title">World News Daily</h1>
+    <header id="header">
+        <h1 id="title">World News Daily</h1>
+        <p id="sub-title">Latest updates from around the globe</p>
+    </header>
 
-    <div class="news-item sports-container">
+    <div class="news-item sports-container relative-news">
         <h2 class="news-header sports-header">Sports</h2>
         <p class="news-body">
             <strong>Golden State Warriors win thriller.</strong> Steph Curry hit a buzzer-beater 
-            to secure a victory against the Lakers.
+            to secure a victory against the Lakers. The game showcased incredible 
+            defense and high-speed transitions.
         </p>
     </div>
 
@@ -22,7 +26,8 @@
         <h2 class="news-header science-header">Science</h2>
         <p class="news-body">
             <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
-            mineral patterns suggesting ancient riverbeds.
+            mineral patterns suggesting ancient riverbeds were active longer than thought. 
+            This boosts the possibility of past life.
         </p>
     </div>
 
@@ -30,7 +35,8 @@
         <h2 class="news-header celebs-header">Celebrities</h2>
         <p class="news-body">
             <strong>Pop star announces surprise tour.</strong> After a three-year hiatus, 
-            the Grammy winner revealed a 40-city world tour.
+            the Grammy winner revealed a 40-city world tour starting this summer. Fans 
+            crashed the website seeking early tickets.
         </p>
     </div>
 
@@ -38,7 +44,8 @@
         <h2 class="news-header tech-header">Technology</h2>
         <p class="news-body">
             <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
-            humans in complex debugging tasks.
+            humans in complex debugging tasks. Experts suggest this will accelerate 
+            software development cycles worldwide.
         </p>
     </div>
 
@@ -46,7 +53,8 @@
         <h2 class="news-header health-header">Health</h2>
         <p class="news-body">
             <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials for a 
-            "one-shot" flu vaccine have shown promising results.
+            "one-shot" flu vaccine have shown promising results. This could eliminate 
+            the need for annual shots by targeting stable virus parts.
         </p>
     </div>
 
@@ -54,7 +62,8 @@
         <h2 class="news-header nature-header">Nature</h2>
         <p class="news-body">
             <strong>Amazon reforestation success.</strong> A massive community project 
-            restored 10,000 hectares of rainforest.
+            restored 10,000 hectares of rainforest. Local biodiversity is returning, 
+            with sightings of rare jaguars increasing.
         </p>
     </div>
 
@@ -62,7 +71,8 @@
         <h2 class="news-header politics-header">Politics</h2>
         <p class="news-body">
             <strong>Global Trade Summit opens.</strong> World leaders gathered today to 
-            discuss new green energy subsidies.
+            discuss new green energy subsidies. The goal is a unified framework for 
+            reducing carbon footprints while maintaining growth.
         </p>
     </div>
 
