--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <nav class="fixed-menu">
+        <a href="#" class="nav-button">Home</a>
+        <a href="#" class="nav-button">Top Stories</a>
+        <a href="#" class="nav-button">Contact</a>
+    </nav>
+
     <header id="header">
         <h1 id="title">World News Daily</h1>
         <p id="sub-title">Latest updates from around the globe</p>
@@ -26,8 +32,7 @@
         <h2 class="news-header science-header">Science</h2>
         <p class="news-body">
             <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
-            mineral patterns suggesting ancient riverbeds were active longer than thought. 
-            This boosts the possibility of past life.
+            mineral patterns suggesting ancient riverbeds were active longer than thought.
         </p>
     </div>
 
@@ -35,8 +40,7 @@
         <h2 class="news-header celebs-header">Celebrities</h2>
         <p class="news-body">
             <strong>Pop star announces surprise tour.</strong> After a three-year hiatus, 
-            the Grammy winner revealed a 40-city world tour starting this summer. Fans 
-            crashed the website seeking early tickets.
+            the Grammy winner revealed a 40-city world tour starting this summer.
         </p>
     </div>
 
@@ -44,8 +48,7 @@
         <h2 class="news-header tech-header">Technology</h2>
         <p class="news-body">
             <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
-            humans in complex debugging tasks. Experts suggest this will accelerate 
-            software development cycles worldwide.
+            humans in complex debugging tasks.
         </p>
     </div>
 
@@ -53,8 +56,7 @@
         <h2 class="news-header health-header">Health</h2>
         <p class="news-body">
             <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials for a 
-            "one-shot" flu vaccine have shown promising results. This could eliminate 
-            the need for annual shots by targeting stable virus parts.
+            "one-shot" flu vaccine have shown promising results.
         </p>
     </div>
 
@@ -62,8 +64,7 @@
         <h2 class="news-header nature-header">Nature</h2>
         <p class="news-body">
             <strong>Amazon reforestation success.</strong> A massive community project 
-            restored 10,000 hectares of rainforest. Local biodiversity is returning, 
-            with sightings of rare jaguars increasing.
+            restored 10,000 hectares of rainforest.
         </p>
     </div>
 
@@ -71,8 +72,7 @@
         <h2 class="news-header politics-header">Politics</h2>
         <p class="news-body">
             <strong>Global Trade Summit opens.</strong> World leaders gathered today to 
-            discuss new green energy subsidies. The goal is a unified framework for 
-            reducing carbon footprints while maintaining growth.
+            discuss new green energy subsidies.
         </p>
     </div>
 
