Realización de 4.24 LenguajeMarcas

--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/news.html
@@ -19,61 +19,80 @@
         <p id="sub-title">Latest updates from around the globe</p>
     </header>
 
-    <div class="news-item sports-container relative-news">
-        <h2 class="news-header sports-header">Sports</h2>
-        <p class="news-body">
-            <strong>Golden State Warriors win thriller.</strong> Steph Curry hit a buzzer-beater 
-            to secure a victory against the Lakers. The game showcased incredible 
-            defense and high-speed transitions.
-        </p>
-    </div>
+    <div class="main-news-layout">
+        
+        <aside class="sticky-links-sidebar">
+            <h3 class="sidebar-title">Categories</h3>
+            <ul class="vertical-link-list">
+                <li><a href="#sports">Sports</a></li>
+                <li><a href="#science">Science</a></li>
+                <li><a href="#celebs">Celebrities</a></li>
+                <li><a href="#tech">Technology</a></li>
+                <li><a href="#health">Health</a></li>
+                <li><a href="#nature">Nature</a></li>
+                <li><a href="#politics">Politics</a></li>
+            </ul>
+        </aside>
 
-    <div class="news-item science-container">
-        <h2 class="news-header science-header">Science</h2>
-        <p class="news-body">
-            <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
-            mineral patterns suggesting ancient riverbeds were active longer than thought.
-        </p>
-    </div>
+        <main class="news-list-content">
+            
+            <div id="sports" class="news-item sports-container relative-news">
+                <h2 class="news-header sports-header">Sports</h2>
+                <p class="news-body">
+                    <strong>Golden State Warriors win thriller.</strong> Steph Curry hit a buzzer-beater 
+                    to secure a victory against the Lakers.
+                </p>
+            </div>
 
-    <div class="news-item celebs-container">
-        <h2 class="news-header celebs-header">Celebrities</h2>
-        <p class="news-body">
-            <strong>Pop star announces surprise tour.</strong> After a three-year hiatus, 
-            the Grammy winner revealed a 40-city world tour starting this summer.
-        </p>
-    </div>
+            <div id="science" class="news-item science-container">
+                <h2 class="news-header science-header">Science</h2>
+                <p class="news-body">
+                    <strong>New water signs on Mars.</strong> NASA's latest rover discovered unique 
+                    mineral patterns.
+                </p>
+            </div>
 
-    <div class="news-item tech-container">
-        <h2 class="news-header tech-header">Technology</h2>
-        <p class="news-body">
-            <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
-            humans in complex debugging tasks.
-        </p>
-    </div>
+            <div id="celebs" class="news-item celebs-container">
+                <h2 class="news-header celebs-header">Celebrities</h2>
+                <p class="news-body">
+                    <strong>Pop star announces surprise tour.</strong> The Grammy winner revealed a 
+                    40-city world tour starting this summer.
+                </p>
+            </div>
 
-    <div class="news-item health-container">
-        <h2 class="news-header health-header">Health</h2>
-        <p class="news-body">
-            <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials for a 
-            "one-shot" flu vaccine have shown promising results.
-        </p>
-    </div>
+            <div id="tech" class="news-item tech-container">
+                <h2 class="news-header tech-header">Technology</h2>
+                <p class="news-body">
+                    <strong>AI breakthrough in coding.</strong> A new open-source model has outperformed 
+                    humans in complex debugging tasks.
+                </p>
+            </div>
 
-    <div class="news-item nature-container">
-        <h2 class="news-header nature-header">Nature</h2>
-        <p class="news-body">
-            <strong>Amazon reforestation success.</strong> A massive community project 
-            restored 10,000 hectares of rainforest.
-        </p>
-    </div>
+            <div id="health" class="news-item health-container">
+                <h2 class="news-header health-header">Health</h2>
+                <p class="news-body">
+                    <strong>Universal flu vaccine trial.</strong> Phase 1 clinical trials have shown 
+                    promising results.
+                </p>
+            </div>
 
-    <div class="news-item politics-container">
-        <h2 class="news-header politics-header">Politics</h2>
-        <p class="news-body">
-            <strong>Global Trade Summit opens.</strong> World leaders gathered today to 
-            discuss new green energy subsidies.
-        </p>
+            <div id="nature" class="news-item nature-container">
+                <h2 class="news-header nature-header">Nature</h2>
+                <p class="news-body">
+                    <strong>Amazon reforestation success.</strong> A massive community project 
+                    restored 10,000 hectares of rainforest.
+                </p>
+            </div>
+
+            <div id="politics" class="news-item politics-container">
+                <h2 class="news-header politics-header">Politics</h2>
+                <p class="news-body">
+                    <strong>Global Trade Summit opens.</strong> World leaders gathered today to 
+                    discuss new green energy subsidies.
+                </p>
+            </div>
+
+        </main>
     </div>
 
 </body>
